<update> update docs

--- a/docs/从屏幕空间变换回局部空间.md
+++ b/docs/从屏幕空间变换回局部空间.md
@@ -1,5 +1,7 @@
 # 从屏幕空间变换回局部空间
 
+<img src="https://render.githubusercontent.com/render/math?math=e^{i \pi} = -1">
+
 在`模型空间(Local Space)`, `世界空间(World Space)`, `视空间(View/Eye Space)`间变换`点或向量`是容易的, 只需要操作矩阵与逆矩阵即可.
 
 将`点或向量`在`NDC`与`屏幕空间(Screen Space)`间变换也是容易的, 不做介绍.
@@ -34,13 +36,13 @@ $$
 >
 >已知
 >$$
->\begin{equation}C_w = E_1P_z\end{equation}
+>C_w = E_1P_z\tag{1}
 >$$
 >
 >$\because C=NC_w$
 >$\therefore C_z=N_zC_w\Longrightarrow$
 >$$
->\begin{equation}T_1P_z+T_2=N_zC_w\end{equation}
+>T_1P_z+T_2=N_zC_w\tag{2}
 >$$
 >变形(1)式, 得:
 >$$
